tests/NormalTests/paczka1/small_fuzzy/76442492.err
Error in line 3: 4FRPKa A164 24,8
Error in line 4: A682 S473 16,6
Error in line 1: W6OrceGe5IA A164 40,5
